# low-latency-exchange

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
docs/: what-we-built.md
fpga/: README.md
include/exchange/: matching_engine.hpp  order.hpp  order_book.hpp  trade.hpp  types.hpp
include/exchange/protocol/: messages.hpp  validate.hpp
include/exchange/time/: timestamp.hpp
src/: main.cpp  matching_engine.cpp  order_book.cpp
tests/: CMakeLists.txt  test_log.hpp  test_matching.cpp  test_messages.cpp  test_order.cpp  test_order_book.cpp  test_timestamp.cpp  test_trade.cpp  test_validate.cpp
